php now works with nginx

--- a/web-server/CSS/auth.css
+++ b/web-server/CSS/auth.css
@@ -56,6 +56,13 @@ div {
     vertical-align:top;
 }
 
+.logo {
+    margin-bottom: 20px;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    vertical-align:top;
+}
 
 #buttons {
     text-align: center;
