--- a/web-server/CSS/auth.css
+++ b/web-server/CSS/auth.css
@@ -40,6 +40,7 @@ button {
     -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
     -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
     transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    margin-bottom: 7px;
 }
 
 .center {
